tdf#105942 Don't hang when file is protected and compressed

Change-Id: I762e6e6d457ea3f5a1f1fd706268b832a71ee550
Reviewed-on: https://gerrit.libreoffice.org/36672
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit f8fdc6417b4d023b7c75485754a0ab1b164a69d6)
Reviewed-on: https://gerrit.libreoffice.org/37071
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 31e22b4bd961ed946bf8f0f4ccb330c699292ddb)